# ta-server

./: README.md  pyproject.toml
ta_server/: core.py  model.py  server.py
tests/: test_core.py
